--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,25 +44,15 @@
 
         tools:layout_editor_absoluteX="316dp" />
 
-    <EditText
-        android:id="@+id/gameInput"
+    <TextView
+        android:id="@+id/gameResult"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Game"
-        android:inputType="textPersonName"
-        android:text="Game Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/action" />
-
-    <ListView
-        android:layout_width="490dp"
-        android:layout_height="820dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
